# cc-notify

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: release.yml
macos/: AppIcon.icns  Info.plist.in
npm-packages/@cc-notify/darwin-arm64/: package.json
npm-packages/@cc-notify/darwin-x64/: package.json
npm-packages/@cc-notify/linux-x64/: package.json
npm-packages/@cc-notify/win32-x64/: package.json
npm-packages/cc-notify-darwin-arm64/: package.json
npm-packages/cc-notify-darwin-x64/: package.json
npm-packages/cc-notify-linux-x64/: package.json
npm-packages/cc-notify-windows-x64/: package.json
scripts/: postinstall.js
src/: main.cpp  notifier.h  notifier_mac.mm  notifier_unix.cpp  notifier_win.cpp
